--- a/backend/.htaccess
+++ b/backend/.htaccess
@@ -5,11 +5,11 @@
     SetEnvIf Authorization .+ HTTP_AUTHORIZATION=$0
 
     # online playgorund
-    RewriteRule ^login/?$ /playground/api/react-router-privated/login.php [NC,L]
-    RewriteRule ^check-auth/?$ /playground/api/react-router-privated/check.php [NC,L]
+    # RewriteRule ^login/?$ /playground/api/react-router-privated/login.php [NC,L]
+    # RewriteRule ^check-auth/?$ /playground/api/react-router-privated/check.php [NC,L]
 
     # localhost
-    # RewriteRule ^login/?$ /login.php [NC,L]
-    # RewriteRule ^check-auth/?$ /check.php [NC,L]    
+    RewriteRule ^login/?$ /login.php [NC,L]
+    RewriteRule ^check-auth/?$ /check.php [NC,L]    
 
 </IfModule>
