React running inside the Docker container

--- a/apache2.conf
+++ b/apache2.conf
@@ -32,7 +32,7 @@ Listen 80
 #</VirtualHost>
 
 
-# backend webpack
+# backend react
 <VirtualHost *:80>
     ServerName backend
     DocumentRoot "/var/www/backend"
