--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,38 @@
 version: '3.7'
 services:
+
+  # backend: apache
+  backend:
+    build:
+      context: ./backend
+    container_name: webpack_php-${CONTAINER_PREFIX}
+    restart: always
+    volumes:
+      - "./backend:/var/www/backend"
+      - "./apache2.conf:/etc/apache2/apache2.conf"
+    ports:
+      - ${APP_PORT}:80
+    links:
+      - mysql
+    depends_on:
+      - mysql
+    working_dir: /var/www/backend
+  
+  # data persistence service layer
+  mysql:
+    image: mysql:5.6.41
+    container_name: webpack_mysql-${CONTAINER_PREFIX}
+    volumes:
+      - "db_data:/var/lib/mysql"
+      - "./mysql/initial_data:/docker-entrypoint-initdb.d"
+    ports:
+      - ${DB_PORT}:3306
+    environment:
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+    # mysql default state
+    command: mysqld --sql_mode="" --character-set-server=utf8 --collation-server=utf8_slovenian_ci --init-connect='SET NAMES UTF8;' --innodb-flush-log-at-trx-commit=0
+
+  # frontend: react
   app:
     build:
       context: .
@@ -11,7 +44,11 @@ services:
     command: npm start
     
     ports:
-      - ${APP_PORT}:3000
+      - 3000:3000
 
     environment:
       - NODE_ENV=development
+
+volumes:
+  db_data:
+    name: webpack_vol-${CONTAINER_PREFIX}
